Refactoring message-ids.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -215,8 +215,6 @@ login.failed=Invalid user name or password
 login.repository=Repository
 login.not.superuser=To use the AdminTool, you need Superuser privileges.
 
-index.title=Welcome to Dandelion, the Cinnamon AdminTool
-index.manage_tables=Manage Tables
 index.manage.acl=ACLs
 index.manage.format=Formats
 index.manage.group=Groups
@@ -239,7 +237,6 @@ index.manage.metasetType=Metaset Types
 
 group.create.title=Create Group
 group.create=New Group
-group.id=ID
 group.description=Description
 group.is_user=Is User Group
 group.name=Name
@@ -260,7 +257,7 @@ user.email=Email
 user.language=Language code
 user.list=User List
 user.list.title=User List
-user.id=ID
+id=Id
 user.description=Description
 user.fullname=Fullname
 user.name=Name
@@ -289,7 +286,6 @@ relationType.rightobjectprotected=Right Object Protected
 relationType.edit.title=Edit Relation Type
 relationType.list=Relation Type List
 relationType.list.title=Relation Type List
-relationType.id=Id
 relationType.show.title=Show Relation Type
 relationtype.delete.success=Relation of type {0} has been deleted.
 
@@ -300,7 +296,6 @@ acl.name=Name
 acl.edit.title=Edit ACL
 acl.list=List ACLs
 acl.list.title=ACL List
-acl.id=ID
 acl.show.title=Show ACLs
 acl.showAclsByGroup.title=ACL List
 acl.remove_from_group=Remove From Group
@@ -317,7 +312,6 @@ objectType.name=Name
 objectType.edit.title=Edit Object Type
 objectType.list=List Object Types
 objectType.list.title=Object Type List
-objectType.id=ID
 objectType.show.title=Show Object Types
 
 format.create=New Format
@@ -329,19 +323,17 @@ format.extension=Extension
 format.edit.title=Edit Format
 format.list=List Formats
 format.list.title=Format List
-format.id=Id
 format.show.title=Show Format
 format.update.failed=Failed to save format.
 format.empty.name=Please provide a valid name.
 
 aclEntry.list.title=AclEntries
-aclEntry.id=ID
 aclEntry.group=Group
 aclEntry.acl=ACL
 aclEntry.list=List AclEntries
 aclEntry.show.title=AclEntry
 aclEntry.link.show=Show AclEntries
-aclEntry.list.onlyAcl=Only showing AclEntries of Acl "{0}"
+aclEntry.list.onlyAcl=Only showing AclEntries of Acl ''{0}''
 aclEntry.list.onlyGroup=Only showing AclEntries of Group "{0}"
 
 permission.activated=active
@@ -353,7 +345,6 @@ indexType.new.label=New Index Type
 indexType.create.label=Create Index Type
 indexType.edit.label=Edit Index Type
 indexType.show.label=Show Index Type
-indexType.id.label=ID
 indexType.dataType.label=Data Type
 indexType.indexerClass.label=Indexer Class
 indexType.name.label=Name
@@ -362,11 +353,10 @@ indexType.delete.confirm=Do you really want to delete this IndexType?
 
 indexItem.list.label=Index Item List
 indexItem.label=Index Item
-indexItem.id.label=ID
 indexItem.fieldname.label=Field Name
 indexItem.forContent.label=For Content
 indexItem.forMetadata.label=For Metadata
-indexItem.forSysMeta.label=For SysMeta
+indexItem.forSysMeta.label=For system metadata
 indexItem.indexGroup.label=Index Group
 indexItem.indexType.label=Index Type
 indexItem.multipleResults.label=Multiple Results
@@ -378,11 +368,10 @@ indexItem.vaProviderParams.label=VA Provider Params
 
 indexGroup.label=Index Group
 indexGroup.new.label=New Index Group
-indexGroup.id.label=ID
 indexGroup.name.label=Name
 
 language.update.success=Successfully updated language "{0}"
-language.update.fail=Failed to update language:<br/> {0}
+language.update.fail=Failed to update language\:<br> {0}
 language.delete.success=Successfully deleted language "{0}"
 language.list.title=List of languages
 language.list=List languages
@@ -390,7 +379,6 @@ language.create.title=Add a language
 language.create=Add a language
 language.isoCode=ISO or language code
 save.changes=Save changes
-language.id=Id
 language.show.title=Language object details
 language.edit.title=Edit language
 
@@ -401,7 +389,6 @@ message.delete.success=Successfully deleted message "{0}"
 message.list.title=List of message ids
 message.list=List message-ids
 message.create.title=Add a new message id and translation
-message.id=Id
 message.show.title=Translations of "{0}"
 message.edit.title=Edit message id / translations
 message.message=Message-Id
@@ -424,14 +411,12 @@ group.subgroup.list.title=Sub-groups of "{0}"
 link.to.showUsersByGroup=Back to direct users of "{0}"
 link.to.show.group=Back to group "{0}"
 
-error.folder.not_found=The requested Folder was not found.
 login.success=Successfully logged in.
 
 osd.name=Name
 osd.format=Format
 osd.type=Type
 osd.owner=Owner
-osd.id=Id
 osd.version=Version
 osd.lockedBy=Locked by
 osd.size=Size
@@ -445,7 +430,6 @@ folder.version.head=Show only newest version
 folder.version.branch=Show newest version in all branches
 folder.do.filter=filter versions
 index.folder.link=Browse repository
-index.webClient=WebClient
 error.folder.not.found=The requested Folder was not found in the database.
 error.wrong.format=Wrong format.
 folder.render.preview=Render content preview
@@ -499,7 +483,6 @@ icon.info.link=Information about this item
 folder.name=Name
 folder.owner=Owner
 folder.acl=ACL
-folder.id=Id
 folder.type=Type
 folder.info.title=Show more information about this folder.
 folder.close.view=Hide child folder view
@@ -534,7 +517,6 @@ folderType.list.title=List FolderTypes
 folderType.confirm.delete=Do you really want to delete this folder type?
 relationType.confirm.delete=Do you really want to delete this relation type?
 folderType.delete.fail=Failed to delete this FolderType. It is probably in use. Original error message: ''{0}''
-folderType.id=Id
 
 uiLanguage.update.success=Successfully updated language "{0}"
 uiLanguage.update.fail=Failed to update language:<br/> {0}
@@ -544,7 +526,6 @@ uiLanguage.list=List UI-languages
 uiLanguage.create.title=Add a UI-language
 uiLanguage.create=Add a UI-language
 uiLanguage.isoCode=ISO or language code
-uiLanguage.id=Id
 uiLanguage.show.title=UI-Language object details
 uiLanguage.edit.title=Edit UI-language
 
@@ -562,10 +543,8 @@ health.checkTypes.intro=Type objects are used to provide default categories - fo
   repository is not of specific type like document, image or such, it will have the "default object type". The same goes \
   for folders and other "typed" things.
 health.checkTypes.title=Check type objects
-health.types.ObjectType=Default ObjectType
 health.objectType.missing=Default object type is missing.
 health.to.fixObjectTypes=fix default ObjectType
-health.types.FolderType=Default FolderType
 health.folderType.missing=Default folder type is missing.
 health.to.fixFolderTypes=fix default FolderType
 health.fixed.folderType=Created default folder type.
@@ -594,7 +573,7 @@ health.usersGroup="Users" group
 health.to.fillUpUsersGroup=Add users to "users" group
 health.usersGroup.status=Users group is complete
 cinnamon.homepage=Cinnamon Homepage
-license.homepage=License: LGPL 2.1
+license.homepage=License\: LGPL 2.1 (or newer)
 relationType.none.defined=No relation types have been defined yet.
 objectType.empty.name=Please specify a name for this ObjectType.
 objectType.update.failed=Failed to update object type.
@@ -642,7 +621,6 @@ relationType.rightResolver=Right relation resolver
 
 changeTrigger.create=Create ChangeTrigger
 changeTrigger.list.title=List of ChangeTriggers
-changeTrigger.id=Id
 changeTrigger.command=Command
 changeTrigger.triggerType=Type
 changeTrigger.preTrigger=Pre-trigger
@@ -660,12 +638,11 @@ changeTrigger.config=Configuration parameters
 
 error.class.not.found=The specified class was not found on the classpath. Please check the name again and / or contact \
   your administrator.
-error.not.iTrigger.class=Please enter the name of a class which is in the classpath and implements server.interfaces.ITrigger.
+error.not.iTrigger.class=Please enter the name of a class which is in the classpath and implements cinnamon.trigger.ITrigger.
 index.manage.changeTriggerType=Change Trigger Types
 
 changeTriggerType.list.title=Change Trigger Types
 changeTriggerType.list=List of Change Trigger Types
-changeTriggerType.id=Id
 changeTriggerType.name=Name
 changeTriggerType.description=Description
 changeTriggerType.triggerClass=Trigger Class
@@ -684,7 +661,6 @@ index.manage.relationResolver=RelationResolver
 
 relationResolver.list.title=Relation Resolver
 relationResolver.list=List of relation resolvers
-relationResolver.id=Id
 relationResolver.name=Name
 relationResolver.config=Configuration
 relationResolver.resolverClass=Resolver class
@@ -699,7 +675,6 @@ error.object.in.use=Sorry, I cannot delete this object because it is still in us
 
 lifeCycle.list.title=LifeCycles
 lifeCycle.list=List of LifeCycles
-lifeCycle.id=Id
 lifeCycle.name=Name
 lifeCycle.defaultState=Default state
 lifeCycle.states=LifeCycle states
@@ -727,7 +702,6 @@ lcs.lifeCycle=LifeCycle
 lcs.config=XML Configuration
 lcs.stateClass=State class
 lcs.name=Name
-lcs.id=Id
 lcs.edit=edit
 lcs.delete=delete
 lcs.lifeCycle.list.empty=There are no LifeCycle objects available at the moment.
@@ -755,7 +729,6 @@ lcs.list=List of LifeCycleStates
 transformer.none.defined=Did not find any transformers in the database.
 transformer.title=Transformers
 transformer.list=List of Transformers
-transformer.id=Id
 transformer.name=Name
 transformer.description=Description
 transformer.transformerClass=Transformation class
@@ -806,7 +779,6 @@ configEntry.list.title=Configuration entries
 configEntry.create=Create configuration entry
 configEntry.none.defined=Currently, there are no configuration entries defined.
 index.manage.configEntry=Configuration entries
-id=Id
 configEntry.confirm.delete=Do you really want to delete this configuration entry?
 transformer.confirm.delete=Do you really want to delete this Transformer?
 error.duplicate.message.id=Sorry, there already is already a message-id with this name and language in the database.
@@ -817,7 +789,6 @@ indexGroup.list.h1=List of IndexGroups
 indexGroup.create.link=Create IndexGroup
 indexGroup.create.h1=Create an IndexGroup
 label.name=Name
-label.id=Id
 indexItem.edit.title=Edit IndexItem
 indexItem.list.link=List IndexItems
 indexItem.create.link=Create IndexItem
@@ -927,3 +898,5 @@ osd.copy.into.unknown=copy to ?
 osd.preview=Preview of ${0}
 osd.preview.th=Preview
 cinnamon.cms=Cinnamon ECMS
+error.permission.not_found=The permission {0} was not found.
+lcs.parameter=parameters
