--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -95,8 +95,6 @@ login.failed=Nom d'utilisateur ou mot de passe non valide
 login.repository=R\u00e9f\u00e9rentiel
 login.not.superuser=Pour utiliser l'outil d'administration, il vous faut les privil\u00e8ges du super-utilisateur.
 
-index.title=Bienvenue sur Dandelion, l'outil d'administration de Cinnamon 
-index.manage_tables=Gestion des tables
 index.manage.acl=ACLs
 index.manage.format=Formats
 index.manage.group=Groupes
@@ -118,7 +116,6 @@ index.manage.health=Contr\u00f4le d'int\u00e9grit\u00e9
 
 group.create.title=Cr\u00e9er un groupe
 group.create=Nouveau groupe
-group.id=ID
 group.description=Description
 group.is_user=Est le groupe d'utilisateurs
 group.name=Nom
@@ -150,7 +147,6 @@ user.add_to_group=Ajouter au groupe
 user.remove_from_group=Enlever du groupe
 user.edit.title=\u00c9diter l'utilisateur
 user.show.title=Afficher l'utilisateur
-user.id=ID
 user.show_groups=Afficher les groupes
 user.update.success=L'utilisateur a \u00e9t\u00e9 mis \u00e0 jour.
 user.update.fail=\u00c9chec de la mise \u00e0 jour du compte utilisateur. Reportez-vous au fichier journal pour plus d'informations.\n{0}
@@ -167,7 +163,6 @@ relationType.rightobjectprotected=Objet droit prot\u00e9g\u00e9
 relationType.edit.title=\u00c9diter le type de relation
 relationType.list=Liste des types de relation
 relationType.list.title=Liste des types de relation
-relationType.id=ID
 relationType.show.title=Afficher le type de relation
 relationtype.delete.success=Le type de relation {0} est supprim\u00e9.
 
@@ -178,7 +173,6 @@ acl.name=Nom
 acl.edit.title=\u00c9diter l'ACL
 acl.list=Lister les ACLs
 acl.list.title=Liste ACL
-acl.id=ID
 acl.show.title=Afficher les ACLs
 acl.showAclsByGroup.title=Liste ACL
 acl.remove_from_group=Enlever du groupe
@@ -195,7 +189,6 @@ objectType.name=Nom
 objectType.edit.title=\u00c9diter le type d'object
 objectType.list=Lister les types d'object
 objectType.list.title=Liste des types d'objet
-objectType.id=ID
 objectType.show.title=Afficher les types d'objet
 
 format.create=Nouveau format
@@ -207,19 +200,17 @@ format.extension=Extension
 format.edit.title=\u00c9diter le format
 format.list=Lister les formats
 format.list.title=Liste des formats
-format.id=Id
 format.show.title=Afficher le format
 format.update.failed=\u00c9chec de l'enregistrement du format.
 format.empty.name=Veuillez indiquer un nom valide.
 
 aclEntry.list.title=Entr\u00e9es ACL (Liste de Contr\u00f4le d'Acc\u00e8s)
-aclEntry.id=ID
 aclEntry.group=Groupe
 aclEntry.acl=ACL
 aclEntry.list=Lister les entr\u00e9es ACL (liste de contr\u00f4le d'acc\u00e8s)
 aclEntry.show.title=Entr\u00e9e ACL
 aclEntry.link.show=Afficher les entr\u00e9es ACL (liste de contr\u00f4le d'acc\u00e8s)
-aclEntry.list.onlyAcl=Affichant uniquement les entr\u00e9es ACL de l'ACL "{0}"
+aclEntry.list.onlyAcl=Affichant uniquement les entru00e9es ACL de l'ACL ''{0}''
 aclEntry.list.onlyGroup=Affichant uniquement les entr\u00e9es ACL du groupe "{0}"
 
 permission.activated=activ\u00e9
@@ -231,7 +222,6 @@ indexType.new.label=Nouveau type d''index
 indexType.create.label=Cr\u00e9er un type d''index
 indexType.edit.label=\u00c9diter le type d'index
 indexType.show.label=Afficher le type d'index
-indexType.id.label=ID
 indexType.dataType.label=Type de donn\u00e9es
 indexType.indexerClass.label=Classe d'indexation
 indexType.name.label=Nom
@@ -240,7 +230,6 @@ indexType.delete.confirm=Voulez-vous vraiment supprimer ce type d'index ?
 
 indexItem.list.label=Liste des \u00e9l\u00e9ments d'index
 indexItem.label=\u00e9l\u00e9ment d'index
-indexItem.id.label=ID
 indexItem.fieldname.label=Nom du champ
 indexItem.forContent.label=Pour le contenu
 indexItem.forMetadata.label=Pour les m\u00e9tadonn\u00e9es
@@ -256,11 +245,10 @@ indexItem.vaProviderParams.label=Param\u00e8tres de "Value Assistance Provider"
 
 indexGroup.label=groupe d'index
 indexGroup.new.label=Nouveau groupe d'index
-indexGroup.id.label=ID
 indexGroup.name.label=Nom
 
 language.update.success=Mise \u00e0 jour r\u00e9ussie de la langue "{0}"
-language.update.fail=\u00c9chec de la mise \u00e0 jour de la langue :<br/> {0}
+language.update.fail=u00c9chec de la mise u00e0 jour de la langue \:<br> {0}
 language.delete.success=Langue "{0}" supprim\u00e9e avec succ\u00e8s
 language.list.title=Liste des langues
 language.list=Lister les langues
@@ -268,7 +256,6 @@ language.create.title=Ajouter une langue
 language.create=Ajouter une langue
 language.isoCode=ISO ou code langue
 save.changes=Enregistrer les modifications
-language.id=ID
 language.show.title=D\u00e9tails sur la langue de l'objet
 language.edit.title=\u00c9diter la langue
 
@@ -279,7 +266,6 @@ message.delete.success=Message "{0}" supprim\u00e9 avec succ\u00e8s
 message.list.title=Liste des ID de message
 message.list=Lister les ID de message
 message.create.title=Ajouter un nouvel ID de message et la traduction
-message.id=ID
 message.show.title=Traductions de "{0}"
 message.edit.title=\u00c9diter l'ID de message / les traductions
 message.message=ID de message
@@ -303,14 +289,12 @@ link.to.showUsersByGroup=Retour aux utilisateurs directs de "{0}"
 link.to.show.group=Retour au groupe "{0}"
 
 folder.index=Dossiers
-error.folder.not_found=Le dossier demand\u00e9 est introuvable.
 login.success=Connexion r\u00e9ussie.
 
 osd.name=Nom
 osd.format=Format
 osd.type=Type
 osd.owner=Propri\u00e9taire
-osd.id=Id
 osd.version=Version
 osd.lockedBy=V\u00e9rrouill\u00e9 par
 osd.size=Taille
@@ -324,7 +308,6 @@ folder.version.head=Afficher uniquement la version la plus r\u00e9cente
 folder.version.branch=Afficher la version la plus r\u00e9cente dans toutes les branches
 folder.do.filter=filtrer les versions
 index.folder.link=Parcourir le r\u00e9f\u00e9rentiel
-index.webClient=Web Client
 error.folder.not.found=Le dossier demand\u00e9 est introuvable dans la base de donn\u00e9es.
 error.wrong.format=Format incorrect.
 folder.render.preview=Restituer la pr\u00e9visualisation du contenu
@@ -375,7 +358,6 @@ icon.info.link=Informations sur cet \u00e9l\u00e9ment
 folder.name=Nom
 folder.owner=Propri\u00e9taire
 folder.acl=ACL
-folder.id=Id
 folder.type=Type
 folder.info.title=Afficher plus d'informations sur ce dossier.
 folder.close.view=Masquer l'affichage du dossier enfant
@@ -409,7 +391,6 @@ folderType.list.title=Liste des types de dossier
 folderType.confirm.delete=Voulez-vous vraiment supprimer ce type de dossier ?
 relationType.confirm.delete=Voulez-vous vraiment supprimer ce type de relation ?
 folderType.delete.fail=La suppression de ce type de dossier a \u00e9chou\u00e9. Il est probablement encore utilis\u00e9. Message d'erreur initial : ''{0}''
-folderType.id=Id
 
 uiLanguage.update.success=Mise \u00e0 jour r\u00e9ussie de la langue "{0}"
 uiLanguage.update.fail=\u00c9chec de la mise \u00e0 jour de la langue :<br/> {0}
@@ -419,7 +400,6 @@ uiLanguage.list=Lister les langues d'interface utilisateur
 uiLanguage.create.title=Ajouter une langue d'interface utilisateur
 uiLanguage.create=Ajouter une langue d'interface utilisateur
 uiLanguage.isoCode=ISO ou code langue
-uiLanguage.id=ID
 uiLanguage.show.title=D\u00e9tails sur la langue de l'objet de l'interface utilisateur 
 uiLanguage.edit.title=\u00c9diter la langue d'interface utilisateur
 
@@ -435,10 +415,8 @@ health.to.index=Contr\u00f4le d'int\u00e9grit\u00e9 principal
 health.to.checkTypes=V\u00e9rifier les objects de type
 health.checkTypes.intro=Les objets de type sont utilis\u00e9s pour fournir des cat\u00e9gories par d\u00e9faut - par exemple, chaque fois qu'un objet dans un r\u00e9f\u00e9rentiel n'a pas de type sp\u00e9cifique tel que document, image ou autre, il aura le "type d'objet par d\u00e9faut". Il en va de m\u00eame pour les dossiers et autres choses typ\u00e9s.
 health.checkTypes.title=V\u00e9rifier les objects de type
-health.types.ObjectType=Type d'objet par d\u00e9faut
 health.objectType.missing=Type d'objet par d\u00e9faut manquant
 health.to.fixObjectTypes=r\u00e9parer le type d'objet par d\u00e9faut
-health.types.FolderType=Type de dossier par d\u00e9faut
 health.folderType.missing=Type de dossier par d\u00e9faut manquant
 health.to.fixFolderTypes=r\u00e9parer le type de dossier par d\u00e9faut
 health.fixed.folderType=Type de dossier par d\u00e9faut cr\u00e9\u00e9
@@ -466,7 +444,7 @@ health.usersGroup=Groupe "utilisateurs"
 health.to.fillUpUsersGroup=Ajouter des utilisateurs au groupe "utilisateurs" 
 health.usersGroup.status=Groupe "utilisateurs" complet
 cinnamon.homepage=Page d'accueil de Cinnamon
-license.homepage=Licence : LGPL 2.1
+license.homepage=Licence \: LGPL 2.1
 relationType.none.defined=Aucun type de relation n'est encore d\u00e9fini.
 objectType.empty.name=Veuillez sp\u00e9cifier un nom pour ce type d'objet.
 objectType.update.failed=\u00c9chec de la mise \u00e0 jour du type d'objet.
@@ -503,7 +481,6 @@ relationType.rightResolver=R\u00e9solveur de relation droite
 
 changeTrigger.create=Cr\u00e9er un d\u00e9clencheur
 changeTrigger.list.title=Liste des d\u00e9clencheurs
-changeTrigger.id=ID
 changeTrigger.command=Commande
 changeTrigger.triggerType=Type
 changeTrigger.preTrigger=Pr\u00e9-d\u00e9clencheur
@@ -521,12 +498,11 @@ changeTrigger.config=Param\u00e8tres de configuration
 
 error.missing.name=Veuillez entrer un nom.
 error.class.not.found=La classe sp\u00e9cifi\u00e9e est introuvable dans classpath. Veuillez v\u00e9rifier \u00e0 nouveau le nom et / ou contacter votre administrateur.
-error.not.iTrigger.class=Veuillez entrer le nom d'une classe qui est dans classpath et qui impl\u00e9mente server.interfaces.ITrigger.
+error.not.iTrigger.class=Veuillez entrer le nom d'une classe qui est dans classpath et qui implu00e9mente cinnamon.trigger.ITrigger.
 index.manage.changeTriggerType=Types de d\u00e9clencheur
 
 changeTriggerType.list.title=Types de d\u00e9clencheur
 changeTriggerType.list=Liste des types de d\u00e9clencheurs
-changeTriggerType.id=ID
 changeTriggerType.name=Nom
 changeTriggerType.description=Description
 changeTriggerType.triggerClass=Classe de d\u00e9clencheur
@@ -545,7 +521,6 @@ index.manage.relationResolver=R\u00e9solveurs de relation
 
 relationResolver.list.title=R\u00e9solveurs de relation
 relationResolver.list=Liste des r\u00e9solveurs de relation
-relationResolver.id=ID
 relationResolver.name=Nom
 relationResolver.config=Configuration
 relationResolver.resolverClass=Classe de r\u00e9solveur
@@ -559,7 +534,6 @@ error.object.in.use=D\u00e9sol\u00e9, impossible de supprimer cet objet, car il 
 
 lifeCycle.list.title=Cycles de vie
 lifeCycle.list=Liste des cycles de vie
-lifeCycle.id=ID
 lifeCycle.name=Nom
 lifeCycle.defaultState=\u00c9tat par d\u00e9faut
 lifeCycle.states=\u00c9tats de cycle de vie
@@ -587,7 +561,6 @@ lcs.lifeCycle=Cycle de vie
 lcs.parameter=Param\u00e8tres
 lcs.stateClass=Classe d'\u00e9tat
 lcs.name=Nom
-lcs.id=ID
 lcs.edit=\u00e9diter
 lcs.delete=supprimer
 lcs.lifeCycle.list.empty=Objets de cycle de vie non disponibles actuellement.
@@ -615,7 +588,6 @@ lcs.list=Liste des \u00e9tats de cycle de vie
 transformer.none.defined=Transformateurs introuvables dans la base de donn\u00e9es.
 transformer.title=Transformateurs
 transformer.list=Liste des transformateurs
-transformer.id=ID
 transformer.name=Nom
 transformer.description=Description
 transformer.transformerClass=Classe de transformation
@@ -676,7 +648,6 @@ indexGroup.list.h1=Liste des groupes d'index
 indexGroup.create.link=Cr\u00e9er un groupe d'index
 indexGroup.create.h1=Cr\u00e9er un groupe d'index
 label.name=Nom
-label.id=ID
 indexItem.edit.title=\u00c9diter un \u00e9l\u00e9ment d'index
 indexItem.list.link=Lister les \u00e9l\u00e9ments d'index
 indexItem.create.link=Cr\u00e9er un \u00e9l\u00e9ment d'index
@@ -697,3 +668,4 @@ html.hide.area=masquer
 message.export.xml=Exporter en tant que format XML brut
 message.export.xliff=Exporter en tant que format XLIFF
 link.edit.folderType.title=Changer le type de dossier
+create.name=Nom
